# zeldspar

./: zeldspar.cabal
examples/: ZeldsparTest.hs
src/: Zeldspar.hs  Ziria.hs
