name:                zeldspar
version:             0.2
synopsis:            Ziria + Feldspar
description:         see README.md
license:             BSD3
license-file:        LICENSE
author:              Markus Aronsson, Emil Axelsson, Koen Claessen, Anton Ekblad, Máté Karácsony
maintainer:          mararon@chalmers.se
copyright:           Copyright (c) 2017,
                       Markus Aronsson, Emil Axelsson,
                       Koen Claessen, Anton Ekblad,
                       Máté Karácsony
                     Copyright (c) 2015-2016,
                       Emil Axelsson, Koen Claessen,
                       Anton Ekblad, Máté Karácsony
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  examples/*.hs
  tests/*.hs

source-repository head
  type:     git
  location: https://github.com/markus-git/zeldspar

library
  exposed-modules:
    Zeldspar
    Ziria

  hs-source-dirs: src

  default-language: Haskell2010

  default-extensions:
    GADTs
    RankNTypes
    ScopedTypeVariables

  build-depends:
    base < 5,
    mtl,
    co-feldspar,
    transformers

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  build-depends:
    base,
    imperative-edsl,
    raw-feldspar,
    zeldspar
